--- a/client/src/index.css
+++ b/client/src/index.css
@@ -29,6 +29,7 @@ body {
 
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    /* margin-top: 3rem; */
 
 }
 
@@ -169,8 +170,8 @@ form h4 {
   row-gap: 1rem;
   display: flex;
   justify-content: space-evenly;
-  
-  z-index: 999999;
+  z-index: 1;
+  /* z-index: 999999; */
 }
 
 .logo {
@@ -315,6 +316,4 @@ form h4 {
 ::-webkit-scrollbar {
   display: none;
 }
-
-
 
