--- a/client/src/index.css
+++ b/client/src/index.css
@@ -328,3 +328,22 @@ form h4 {
   text-transform: capitalize;
 }
 
+
+
+.overlay {
+  position: fixed; /* or use "absolute" if you want it relative to a parent */
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent overlay */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.custom-datepicker {
+  /* Your styles for the date picker */
+}
+
+
