--- a/client/src/index.css
+++ b/client/src/index.css
@@ -30,6 +30,7 @@ body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     /* margin-top: 3rem; */
+    padding: 0px
 
 }
 
@@ -170,8 +171,6 @@ form h4 {
   row-gap: 1rem;
   display: flex;
   justify-content: space-evenly;
-  z-index: 1;
-  /* z-index: 999999; */
 }
 
 .logo {
@@ -342,8 +341,7 @@ form h4 {
   align-items: center;
 }
 
-.custom-datepicker {
-  /* Your styles for the date picker */
-}
+
+
 
 
