--- a/client/src/index.css
+++ b/client/src/index.css
@@ -202,6 +202,10 @@ form h4 {
 }
 
 
+.react-datepicker__triangle{
+  display: none;
+}
+
 .customMax{
   height: max-content !important;
   }
@@ -351,4 +355,10 @@ form h4 {
 .absolute.top-full.left-0.w-full.border.bg-white.shadow > div:nth-child(1){
   /* background: #F4F4F5; */
   font-weight: bold;
+}
+
+
+
+.child {
+  flex: 1 0 27%; 
 }
