added modal background control

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -371,3 +371,7 @@ form h4 {
 .fixed.inset-0.z-10.w-screen.overflow-y-auto > div > div > div:nth-child(2) > div > div > div:nth-child(2){
   height: 55px !important;
 }
+
+.overflow-hidden {
+  overflow: hidden;
+}
