--- a/client/src/index.css
+++ b/client/src/index.css
@@ -25,28 +25,16 @@
 /* ============= GLOBAL CSS =============== */
 
 
-:root {
 
-
-  --fixed-width: 600px;
-
-  /* box shadow*/
-  --shadow-1: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
-  --shadow-2: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
-    0 2px 4px -1px rgba(0, 0, 0, 0.06);
-  --shadow-3: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
-    0 4px 6px -2px rgba(0, 0, 0, 0.05);
-  --shadow-4: 0 20px 25px -5px rgba(0, 0, 0, 0.1),
-    0 10px 10px -5px rgba(0, 0, 0, 0.04);
-}
 
 body {
 
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     /* margin-top: 3rem; */
-    padding: 0px
-
+    padding: 0px;
+    background-color: white;
+    color: black;
 }
 
 
@@ -436,4 +424,13 @@ textarea::placeholder {
   opacity: 60%;
   font-weight: 400;
   font-style: italic;
+}
+
+
+
+
+/* nightshift button */
+
+.swap input {
+  display: none;
 }
