--- a/client/src/components/Settings/ColorPicker/styles.css
+++ b/client/src/components/Settings/ColorPicker/styles.css
@@ -9,8 +9,8 @@ body {
 }
 
 .swatch {
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
   border-radius: 8px;
   border: 3px solid #fff;
   box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1), inset 0 0 0 1px rgba(0, 0, 0, 0.1);
@@ -21,6 +21,15 @@ body {
   position: absolute;
   top: calc(100% + 2px);
   left: 0;
+  border-radius: 9px;
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+}
+
+
+.popover {
+  position: absolute;
+  top: -100px;
+  left: -120px;
   border-radius: 9px;
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
 }
