--- a/client/src/index.css
+++ b/client/src/index.css
@@ -59,7 +59,7 @@
   --shadow-4: 0 20px 25px -5px rgba(0, 0, 0, 0.1),
     0 10px 10px -5px rgba(0, 0, 0, 0.04);
   /* dark mode setup */
-  --dark-mode-bg-color: rgb(10 10 10);
+  --dark-mode-bg-color: rgb(10 10 10);;
   --dark-mode-text-color: #f0f0f0;
   --backgroundColor: var(--grey-50);
   --textColor: var(--grey-900);
